--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!-- Nav bar -->
     <div class="navbar">
         <ul>
             <li>Home</li>
@@ -16,7 +17,7 @@
             <li>Contact</li>
         </ul>
     </div>
-
+<!-- School Name -->
 <center>
     <div class="box">
         <h1>
@@ -25,7 +26,8 @@
             ___
         </h1>
     </div>
-    </center>
+</center>
+<!-- Images 3of3 -->
     <div class="images">
         <div class="img1"> 
             <img height="290px" src="./assets/schoolfrontimage.jpg" alt="">
@@ -37,6 +39,18 @@
             <img height="290px" src="./assets/img3.jpg" alt="">
         </div>   
     </div>
+
+
+
+
+    <!-- Quote -->
+<hr>
+<div class="main">
+    <p class="quote">Preparing for the brightest future, VM International School provides unparalleled dedication and commitment to students and their variety of needs, passions and dreams.</p>
+    
+</div>
+
+<!-- Footer -->
 
 
 </body>
